@@ -1,0 +1,4 @@
+perl Makefile.PL
+make
+sudo make install
+
