@@ -13,12 +13,12 @@ use constant {
 $ENV{RDE_NOBOARD_TEST} = 1;
 
 my $mod = 'RPi::DHT11::EnvControl';
-my $env = $mod->new(spin => DHT);
+my $env = $mod->new(spin => DHT, debug => 1);
 
 # temp
 
 my $t = $env->temp;
-is $t, 0, "temp ok with no board";
+is $t, "0.00", "temp ok with no board";
 
 # humidity
 
